# tiered-storage

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md  build_debug.sh  build_release.sh  cluster.yaml  server_start.sh  setup.sh
YCSB/: pom.xml
benchmark/: CMakeLists.txt  benchmark_AtomicMaxLattice.h  benchmark_BoolLattice.h  benchmark_SetLattice.h  run_benchmark.cpp
benchmarks/: CMakeLists.txt  benchmark_AtomicSetLattice.h  benchmark_MaxLattice.h  benchmark_MinLattice.h  run_benchmark.cpp
conf/: config.yaml  config.yml  config_benchmark.yaml  config_user.yaml  ebs_root.txt
credentials/: admin-key.pem  admin-key.pem.enc  admin-key.pem.fingerprint  admin.pem  apiserver-key.pem  apiserver-key.pem.enc  apiserver-key.pem.fingerprint  apiserver.pem  ca-key.pem  ca.pem  etcd-client-key.pem  etcd-client-key.pem.enc  etcd-client-key.pem.fingerprint  etcd-client.pem  etcd-key.pem  etcd-key.pem.enc  etcd-key.pem.fingerprint  etcd.pem  kubelet-tls-bootstrap-token  kubelet-tls-bootstrap-token.enc  kubelet-tls-bootstrap-token.fingerprint  worker-ca-key.pem  worker-key.pem  worker-key.pem.enc  worker-key.pem.fingerprint  worker.pem
include/: base_lattices.h  core_lattices.h  crtp_core_lattices.h  crtp_lattices.h
k8s/: Dockerfile  Dockerfile.kops  add_node.sh  add_node_create.sh  add_nodes.sh  add_server.sh  add_server_create.sh  (+14 more)
kv_store/ici_kvs/: CMakeLists.txt  kvs_client.cpp  kvs_server_distributed.cpp  message.proto
kv_store/lww_kvs/: CMakeLists.txt  client_address.txt  kvs_benchmark.cpp  kvs_benchmark_trigger.cpp  kvs_client.cpp  kvs_ebs_server.cpp  kvs_memory_server.cpp  kvs_monitoring.cpp  kvs_proxy.cpp  kvs_server.cpp  kvs_slo_trigger.cpp  kvs_user.cpp  message.pb.cc  message.pb.h  message.proto  seed_address.txt  server_address.txt
kv_store/versioned_kvs/: CMakeLists.txt  kvs_client.cpp  kvs_server_distributed.cpp  message.pb.cc  message.pb.h  message.proto  request.pb.cc  request.pb.h  request.proto
src/: CMakeLists.txt  base_lattices.h  core_lattices.h
src/bedrock/: CMakeLists.txt  benchmark.cpp  common.cpp  hash_ring.cpp  kvs_benchmark.cpp  kvs_benchmark_trigger.cpp  kvs_monitoring.cpp  kvs_proxy.cpp  kvs_server.cpp  message.proto  monitoring.cpp  routing.cpp  server.cpp  user.cpp
src/bedrock/hash_ring/: CMakeLists.txt  hash_ring.cpp
src/bedrock/kvs/: CMakeLists.txt  gossip_handler.cpp  join_handler.cpp  node_depart_handler.cpp  node_join_handler.cpp  process_gossip.cpp  process_rep_factor_change.cpp  process_rep_factor_response.cpp  process_user_request.cpp  rep_factor_change_handler.cpp  rep_factor_response_handler.cpp  self_depart_handler.cpp  server.cpp  user_request_handler.cpp  utils.cpp
src/bedrock/monitor/: CMakeLists.txt  depart_done_handler.cpp  elasticity.cpp  feedback_handler.cpp  membership_handler.cpp  metadata_helpers.cpp  monitoring.cpp  monitoring_utils.cpp  movement_policy.cpp  policy_algorithm.cpp  replication_helpers.cpp  slo_policy.cpp  stats_helpers.cpp  storage_policy.cpp
src/bedrock/route/: CMakeLists.txt  address_handler.cpp  membership_handler.cpp  replication_change_handler.cpp  replication_response_handler.cpp  routing.cpp  seed_handler.cpp
src/bedrock/server/: CMakeLists.txt  join_handler.cpp  server.cpp
src/bedrock/srvr/: join_handler.cpp  server.cpp
src/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_trigger.cpp
src/cli/: CMakeLists.txt  user.cpp
src/include/: CMakeLists.txt  common.h  common.hpp  communication.proto  hash_ring.h  hash_ring.hpp  hashers.h  hashers.hpp  metadata.h  metadata.hpp  mocked_requests.hpp  requests.h  requests.hpp  server.h  threads.h  threads.hpp  types.hpp
src/include/kvs/: base_kv_store.h  base_kv_store.hpp  kvs_handlers.hpp  rc_kv_store.h  rc_pair_lattice.h  rc_pair_lattice.hpp  versioned_kv_store.h
src/include/lattices/: base_lattices.h  base_lattices.hpp  core_lattices.h  core_lattices.hpp
src/include/monitor/: monitoring_handlers.hpp  monitoring_utils.hpp  policies.hpp  policy_algorithm.hpp
src/include/proto/: misc.proto  replication.proto  requests.proto
src/include/route/: routing_handlers.hpp
src/include/utils/: consistent_hash_map.hpp  server_utility.h  server_utility.hpp  server_utils.hpp
src/include/zmq/: socket_cache.cc  socket_cache.cpp  socket_cache.hpp  zmq_util.cc  zmq_util.cpp  zmq_util.hpp
src/key_value_stores/: CMakeLists.txt  README.md  barrier.cc  barrier.h  ici_client.cc  message.proto  msgqueue.cc  rc_client.cc  ruc_client.cc  ruc_server.cc  server.cc  util.cc  util.h  zmq_util.h
src/lattices/: CMakeLists.txt  array_lattice.h  array_lattice_test.cc  bool_and_lattice.h  bool_and_lattice_test.cc  bool_or_lattice.h  bool_or_lattice_test.cc  lattice.h  lattices.cc  lattices.h  map_lattice.h  map_lattice_test.cc  max_lattice.h  max_lattice_test.cc  min_lattice.h  min_lattice_test.cc  pair_lattice.h  pair_lattice_test.cc  set_intersect_lattice.h  set_intersect_lattice_test.cc  set_union_lattice.h  set_union_lattice_test.cc  timestamp_lattice.h  timestamp_lattice_test.cc  vector_lattice.h  vector_lattice_test.cc
tests/: CMakeLists.txt  jmh_crtp_test.cpp  mock_utils.cpp  mocked.cpp  mocked.hpp  run_lattice_test.cpp  run_server_handler_test.cpp  run_test.cpp  test_BoolLattice.hpp  test_MapLattice.hpp  test_MaxLattice.hpp  test_SetLattice.hpp  test_all.cpp  test_bool_lattice.hpp  test_map_lattice.hpp  test_max_lattice.hpp  test_server_handlers.hpp  test_set_lattice.hpp
tests/bedrock/: CMakeLists.txt
tests/bedrock/kvs/: CMakeLists.txt  run_routing_handler_test.cpp  run_server_handler_test.cpp  run_server_handler_tests.cpp  server_handler_base.hpp  test_node_depart_handler.hpp  test_node_join_handler.hpp  test_routing_handlers.cpp  test_self_depart_handler.hpp  test_server_handlers.hpp
tests/bedrock/route/: CMakeLists.txt  routing_handler_base.hpp  run_routing_handler_test.cpp  test_membership_handler.cpp  test_membership_handler.hpp  test_replication_response_handler.hpp
tests/include/: CMakeLists.txt
tests/include/lattices/: CMakeLists.txt
tests/simple/: test-simple.sh  test_simple.sh
(+103 files in other folders)
