CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(Bedrock)

SET(BEDROCK_VERSION_MAJOR 0)
SET(BEDROCK_VERSION_MINOR 1)
SET(BEDROCK_VERSION_PATCH 0)

SET(CMAKE_CXX_COMPILER /usr/bin/clang++)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED on)

SET(CMAKE_CXX_FLAGS_COMMON
    "-std=c++11 \
    -stdlib=libc++")

SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} \
    ${CMAKE_CXX_FLAGS_COMMON}")

SET(CMAKE_CXX_FLAGS_RELEASE
    "${CMAKE_CXX_FLAGS_RELEASE} \
    ${CMAKE_CXX_FLAGS_COMMON} \
    -O3")

ADD_SUBDIRECTORY(vendor/spdlog)
ADD_SUBDIRECTORY(vendor/yamlcpp)
ADD_SUBDIRECTORY(vendor/googletest)
ADD_SUBDIRECTORY(vendor/zeromq)
ADD_SUBDIRECTORY(vendor/zeromqcpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQCPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${YAMLCPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SPDLOG_INCLUDE_DIRS})

LINK_DIRECTORIES(${ZEROMQ_LINK_DIRS})
LINK_DIRECTORIES(${YAMLCPP_LINK_DIRS})

ADD_SUBDIRECTORY(src)
